2007-02-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomChar.py: handle stripping of newlines
	* src/GrampsDbUtils/_GedcomLex.py: handle newlines and eof
	* src/GrampsDbUtils/_GedcomParse.py (GedcomParser.parse_fam): use
	parse_level

2007-02-26  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py:
	* src/docgen/PSDrawDoc.py:
	* src/docgen/SvgDrawDoc.py:
	* src/docgen/PdfDoc.py:
	* src/docgen/OpenOfficeDoc.py:
	* src/docgen/GtkPrint.py:
	* src/docgen/LPRDoc.py:
	* src/docgen/ODFDoc.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/Calendar.py:
	* src/ReportBase/_ReportUtils.py:
    Remove draw_bar function

2007-02-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/WritePkg.py: Fix crash on gpkg export in Windows

2007-02-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: handle EVENTS with argument on
	the declaration line, give notes and id/handle
	* src/GrampsDbUtils/_GedcomLex.py: handle EVENTS with argument on
	the declaration line

2007-02-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/_AttributeType.py: Add WITNESS (used by GEDCOM parser to
	import textual event witness information
	* src/GrampsDbUtils/_GedcomParse.py: Support for some types of Witness
	data; Parse MAP/LATI/LONG; Fix creation of Nobility Title
	* src/GrampsDbUtils/_GedcomTokens.py: Add MAP,LATI,LONG

2007-02-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: encode file name properly

2007-02-26  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: avoid creating empty elements in xml generator

2007-02-25  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_NoteTab.py: Import RelLib.

2007-02-25  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: attribution for icons
	* src/GrampsDbUtils/_GedcomParse.py: enhancements in parsing
	* src/GrampsDbUtils/_GedcomTokens.py: remove double AGNC
	* src/DataViews/__init__.py: Add NoteView