@@ -1,3 +1,7 @@
+2007-02-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/plugins/ImportGeneWeb.py: Adapt to new Notes api; Some parsing
+	fixes
+
 2007-02-27  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDbUtils/_GedcomChar.py: handle stripping of newlines
 	* src/GrampsDbUtils/_GedcomLex.py: handle newlines and eof
